static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Noto+Sans:wght@400;700&family=Saira:wght@400;700&display=swap');

body {
    background-color: #fb92a9;
    font-family: 'Noto Sans', sans-serif;
    margin: 0;
    padding: 0;
    border: none;
}

main {
    min-height: calc(100vh - 281px);
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: Saira, sans-serif;
}

.hide {
    display: none;
}

.hero-image-container {
    position: relative;
}

.top-header {
    position: absolute;
    left: 50%;
    transform: translate(-50%, 0);
    top: 25%;
    color: #d53c50;
    font-size: 60px;
}

.hero-img {
    min-width: 100% !important;
    height: 300px;
}

.about-btn {
    text-decoration: none;
}

/* header */

.title-header h1 a{
    text-align: center;
    color: black;
}

header {
    background-color: #ffebef;
}

/*-- Navbar ---*/

.navbar {
    font-size: 1.2rem;
    letter-spacing: .08rem;
}

.navbar-nav li {
    padding-right: 0.5rem;
}

.navbar-brand {
    font-size: 1.4rem;
    font-family: Cinzel, serif;
    font-weight: bold;
    padding-left: 0.5rem;
}

.nav-link{
    font-family: Noto Sans, sans-serif;
    font-size: 1.1rem;
    color: #222222;
}

.nav-link:hover {
    color: #d53c50 !important;
}
.navbarToggler {
    margin-left: 0;
}

/*--Cards Section--*/
.card {
    box-shadow: 0 5px 5px rgba(0, 0, 0, .08);
}

.card-zoom {
    position: relative;
    overflow: hidden;
    height: 100%;
}

.card-zoom:hover img {
    transform: scale(1.1);
    -webkit-transform: scale(1.1);
    -moz-transform: scale(1.1);
}

.card-zoom img {
    transition: all 0.4s;
    -webkit-transition: all 0.4s;
    -moz-transition: all 0.4s;
}

/*-- Accordion ---*/
.accordion-button {
    font-size: 70%;
    color: rgb(26, 24, 24) !important;
    text-decoration: none;
    background-color: #ffd4de !important;

}

.accordion-header {
    background-color: grey;
}

/*--Footer--*/
#footer {
    width: 100%;
    background-color: #d53c50;
    height: 125px;
}

.footer-items {
    width: 40%;
    margin: 0 auto;
    padding: 1.5rem 2rem 0 2rem;
}

footer a {
    color: #ffebef;
    text-decoration: none;
}

ul.social {
    list-style-type: none;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    margin: 0 auto;
    padding: 0;
}

ul.social li {
    margin: 0 auto;
    font-size: 1.5rem;
    padding: 0;
}

ul.social li a i {
    color: white;
    transition: all 0.4s ease-out;
    -moz-transition: all 0.4s ease-out;
    -webkit-transition: all 0.4s ease-out;
    -o-transition: all 0.4s ease-out;
}

.social li a i:hover {
    color: #fb92a9;
}

.copyright {
    text-decoration: none;
    color: #fff;
    padding: 0;
}

/* input text fields*/
.text-field-height {
    height: 200px;
}

/* blog page */

/* #blog-cont {
    width: 55%;
} */

.blog-card .card {
    background-color: #ffebef;
    margin: 10px;
    list-style-type: none;
    /* width: 100%; */
}

.blog-card li {
    list-style-type: none;
}

.blog-card h4 a{
    /* font-size: 1.4rem; */
    text-decoration: none;
    color: #222222;
    font-family: Saira, serif;
    /* font-weight: bold; */
    /* font-size: 25px; */
    text-align: left;
}

.no-comment {
    color: #222222;
}

.card-header {
    background-color: #ffebef;
}

.input-group-text {
    background-color: #ffd4de;
    color: black
}

/* #cog {
    position: absolute;
    top: 0px;
    right: 0px;
    margin: 1px;
    font-size: 12px;
} */

/* .blog-card h4 a {
    text-decoration: none;
    color: black;
} */

.comments {
    font-size: 15px;
    color: #36454F
}

.blog-body .card {
    /* width: 95%; */
    background-color: #ffebef;
    list-style-type: none;
    margin: 0 auto;
    /* float: none; */
    margin-bottom: 10px;
    /* font-weight: 550; */
    /* color: #394750; */
}

.blog-footer {
    text-align: right;
}

/* profile page */

#profile-card-cont .card {
    width: 50%;
    text-align: center;
    background-color: #ffebef;
    margin: 100px 0 10px 0 ;
    
}

#profile-card-cont .card .btn {
    background-color: #d53c50;
    color: white;
    border-color: black;
    width: 20%;
    margin: 5px;
    font-size: 25px;
}

#profile-card-cont .card p {
    padding: 4px;
}

#profile-card-cont .card .btn a {
    color: white;
    text-decoration: none;
}

/*--- forms ---*/
.form-container {
    /*font-size: 1.3rem;*/
    background-color: #ffd4de;
    border-radius: 0.25rem;
    padding: 0 40px 30px 40px;
}

.form-container h1 {
    text-align: center;
    margin: 15px 0;
}

.form-container h2 {
    font-size: 1rem;
    display: inline-block;
}

.form-container a {
    display: inline-block;
}

/*----------Falling ribbon animation------*/

.falling-leaves {
    position: absolute;
    top: 0;
    bottom: 0;
    width: 100%;
    height: 100%;
    overflow: hidden;
    z-index: -1;
}

.leaf-scene {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    width: 100%;
    transform-style: preserve-3d;
}

.leaf-scene div {
  position: absolute;
  top: 0;
  left: 0;
  width: 24px;  /*245*/
  height: 50px; /*500*/
  background: url(../img/cancer-ribbon.png) no-repeat;
  background-size: 100%;
  transform-style: preserve-3d;
  backface-visibility: visible;
}


/* Button CSS effects from https: //blog.avada.io/css/button-click-effects/ */
.btn {
    text-align: center;
    /* text-transform: uppercase; */
    cursor: pointer;
    /* font-size: 16px; */
    /* letter-spacing: 2px; */
    position: relative;
    background-color: #d53c50;
    border: none;
    color: #fff;
    padding: 6px;
    width: 120px;
    text-align: center;
    transition-duration: 0.4s;
    overflow: hidden;
    box-shadow: 0 5px 15px #ee86ba;
    border-radius: 4px;
}

.btn:hover {
    background: #fff;
    box-shadow: 0px 2px 10px 5px #d53c50;
    color: #000;
}

.btn:after {
    content: "";
    background: #ee86ba;
    display: block;
    position: absolute;
    /* padding-top: 300%; */
    /* padding-left: 350%; */
    /* margin-left: -20px !important;
    margin-top: -120%; */
    opacity: 0;
    transition: all 0.8s
}

.btn:active:after {
    padding: 0;
    margin: 0;
    opacity: 1;
    transition: 0s
}

.btn:focus {
    outline: 0;
}

